worked on contrast issues and img sizing

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Mooli&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 content {
     max-width: 1600px;
     margin: 0 auto;
@@ -7,19 +11,19 @@ content {
 
 body {
     font-family: 'Mooli', sans-serif;
-    font-size: 2.2vw;
+    font-size: 2.5vw;
     margin: 0;
     padding: 0;
-    color: rgb(166, 42, 42);
+    color: #E4EBDB;
     background-color: whitesmoke;
-    text-shadow: 2px 1px whitesmoke;
+    text-shadow: 2px 1px rgb(96, 25, 25);
 }
 
 header {
     display: flex;
     justify-content: space-around;
     padding: 3%;
-    background-color: rgb(63, 76, 96, .75);
+    background-color: #3A4C64;
 }
 
 h1 {
@@ -29,12 +33,10 @@ h1 {
 
 #photo {
     width: 10%;
-    padding-left: 20%;
 }
 
 nav {
-    background-color: rgb(92, 106, 99, .75);
-    color: rgb(186, 73, 53);
+    background-color: rgb(92, 106, 99);
     display: flex;
     text-align: center;
     flex-direction: column;
@@ -48,44 +50,49 @@ nav a:hover {
 
 a {
     padding: 2%;
+    color: #E4EBDB;
 }
 
 main {
     text-align: center;
     margin-left: 10%;
     margin-right: 10%;
-    text-shadow: 3px 1px rgb(64, 54, 42);
 }
 
 h2 {
     border-bottom: 1px solid rgb(9, 8, 8, .75);
+    color: rgb(9, 8, 8, .6);
 }
 
 h3 {
     background-color: rgb(9, 8, 8, .6);
     padding: 10px;
     margin: 0%;
-    text-shadow: 2px 1px whitesmoke;
 }
 
 section {
     margin-bottom: 4%;
+    background-color: #51412f;
 }
 
 
 .card {
-
     box-sizing: border-box;
     border: 1px solid black;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2), 0 3px 12px 0 rgba(0, 0, 0, 0.18)
 }
 
-ul {
+ul li {
+    color: black;
     list-style-type: none;
 }
 
+ul a:hover {
+    color: black;
+}
+
 footer {
-    background-color: rgb(63, 76, 96, .75);
+    background-color: rgb(63, 76, 96);
     padding: 3%;
     text-align: center;
 }
